# Molecular-ML

./: README.md
molecular_ml_workshops/: 01_rdkit_intro.ipynb  02_molecular_property_prediction.ipynb  03_virtual_screening.ipynb  README.md  pyproject.toml  requirements.txt
molecular_ml_workshops/solutions/: 01_rdkit_intro_solution.ipynb  02_molecular_property_prediction_solution.ipynb  03_virtual_screening_solution.ipynb
